<resources>
    <string name="app_name">ASU_FlashCardApp</string>

    <!-- Login Activity string -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Options Activity strings -->
    <string name="create_new_course">Create New</string>
    <string name="goto_study">Go Study</string>
    <string name="goto_stats">View Stats</string>

    <!-- Create Course Activity strings -->
    <string name="acceptCourseButton">Create Course</string>
    <string name="prevCourseName">Temp Course Name</string>
    <string name="createCourseName">Enter course Name</string>

    <!-- Create fragment code -->
    <string name="createButton">Create</string>
    <string name="tempInputTitle">User Title Goes Here</string>
    <string name="cardInput">Enter card information here.</string>
    <string name="deckInput">Enter deck title here.</string>
    <string name="title"></string>
    <string name="study">Study</string>


    <!-- Test decks for multiple check boxes on fragment_decklist_checks -->
    <string-array name="testdecks">
        <item>SER 100</item>
        <item>SER 200</item>
        <item>SER 215</item>
        <item>SER 222</item>
    </string-array>

</resources>
