<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="com.example.terin.asu_flashcardapp.AddCourse">

    <TextView
        android:id="@+id/prevCourseName"
        android:layout_width="156dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prevCourseName"
        app:layout_constraintBottom_toTopOf="@+id/createCourse_guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/createCourse_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="145dp"
        tools:layout_editor_absoluteY="145dp"
        tools:layout_editor_absoluteX="0dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/createCourseName"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/createCourse_guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createCourse_guideline1"
        app:layout_constraintVertical_bias="0.525">

        <EditText
            android:id="@+id/newCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createCourseName" />
    </android.support.design.widget.TextInputLayout>


    <android.support.constraint.Guideline
        android:id="@+id/createCourse_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="180dp"
        tools:layout_editor_absoluteY="331dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/courseAcceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/acceptCourseButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createCourse_guideline2"
        app:layout_constraintVertical_bias="0.278"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
